<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.homePage.HomeFragment"
    android:background="@color/LightBlue">

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/notification"
        app:layout_constraintBottom_toTopOf="@+id/layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.834"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307"
        android:id="@+id/notification"/>

    <ImageView
        android:layout_width="75dp"
        android:layout_height="85dp"
        android:src="@drawable/user"
        app:layout_constraintBottom_toTopOf="@+id/layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.397" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hi, Minjeong"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.756" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="How are you feeling today?"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.221"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.872" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="359dp"
        android:layout_height="554dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="50dp"
        tools:layout_editor_absoluteX="-2dp">

        <Button
            android:id="@+id/konsultasi"
            android:layout_width="145dp"
            android:layout_height="202dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/blue"
            android:drawableTop="@drawable/konsultasi"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/white"
            android:paddingTop="20dp"
            android:text="@string/about_lonsul"
            android:textAllCaps="false"
            android:textSize="10dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/kelas"
            android:layout_width="145dp"
            android:layout_height="202dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/fitur"
            android:drawableTop="@drawable/kelas"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="20dp"
            android:text="@string/about_kelas"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="10dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/artikel"
            android:layout_width="329dp"
            android:layout_height="155dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="116dp"
            android:background="@drawable/fitur"
            android:drawableLeft="@drawable/viewartikel"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="7dp"
            android:text="@string/about_artikel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>